// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component : Modal Snapshot : not visible 1`] = `
<DocumentFragment>
  <div
    data-testid="target-id"
    id="target-id"
  >
    <div
      class="sc-pscky sc-qQYBZ hyDDvc"
    >
      <div
        class="sc-pscky sc-qZtCU bLCuKf"
      >
        modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component : Modal Snapshot : visible 1`] = `
<DocumentFragment>
  <div
    data-testid="target-id"
    id="target-id"
  >
    <div
      class="sc-pscky sc-qQYBZ bCswed"
    >
      <div
        class="sc-pscky sc-qZtCU dboiiq"
      >
        modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
